# cassh2rs

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  SPECIFICATIONS.md  USAGE.md
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
benches/: conversion_bench.rs
completions/: cassh2rs.bash  cassh2rs.fish  cassh2rs.zsh
docs/: PROJECT_SUMMARY.md  TERMINAL.md
examples/: advanced_monitoring.sh  auto_adapt.sh  backup.sh  deploy.sh  headless.sh  interactive.sh  monitoring.conf  tui_app.sh
scripts/: install.sh
src/: lib.rs  main.rs
src/cli/: mod.rs
src/commands/: builtins.rs  mod.rs
src/generator/: code_gen.rs  gui_launcher.rs  mod.rs  rust_project.rs
src/parser/: ast.rs  lexer.rs  mod.rs  parser.rs  shell_dialect.rs
src/platform/: mod.rs
src/resolver/: dependency_detector.rs  file_classifier.rs  mod.rs  terminal_detector.rs
src/shell_runtime/: mod.rs
src/ui/: mod.rs  notifications.rs  theme.rs  wizard.rs
tests/: code_generation_tests.rs  end_to_end_test.rs  file_classifier_tests.rs  integration_test.rs  lexer_tests.rs  parser_tests.rs
